# learnloop-agent

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260419_0001_initial_schema.py
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: chat.py  drafts.py  health.py  knowledge.py  materials.py  settings.py  workflow_runs.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/executors/: __init__.py
backend/app/models/: __init__.py  entities.py
backend/app/observability/: tracing.py
backend/app/repos/: base.py  chat.py  drafts.py  knowledge.py  materials.py  plans.py  settings.py  workflows.py
backend/app/schemas/: __init__.py  chat.py  drafts.py  knowledge.py  materials.py  settings.py  workflow.py
backend/app/services/: chat_draft.py  knowledge_write.py  material_chunking.py  material_draft.py  material_indexing.py  material_ingest.py  material_parser.py  model_adapter.py  study_qa.py  workflow_runtime.py
backend/app/tasks/: celery_app.py  material_tasks.py  reflection_tasks.py
backend/app/tools/: __init__.py
backend/app/workflows/: base.py  daily_reflection.py  material_ingest.py  study_qa.py
backend/tests/: test_chat_draft_service.py  test_study_qa_service.py
frontend/: Dockerfile  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/components/: app-shell.tsx  locale-switcher.tsx
(+75 files in other folders)
