[project]
name = "myagent-backend"
version = "0.1.0"
description = "Backend scaffold for the learning knowledge distillation agent"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "alembic>=1.13,<2.0",
  "celery>=5.4,<6.0",
  "fastapi>=0.115,<1.0",
  "httpx>=0.27,<1.0",
  "langchain-core>=0.3,<1.0",
  "langgraph>=0.2,<1.0",
  "openai>=1.0,<2.0",
  "opentelemetry-api>=1.27,<2.0",
  "opentelemetry-sdk>=1.27,<2.0",
  "pgvector>=0.3,<1.0",
  "psycopg[binary]>=3.2,<4.0",
  "pydantic-settings>=2.5,<3.0",
  "redis>=5.0,<6.0",
  "sqlalchemy>=2.0,<3.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"
